fix column spacing [skip ci]

--- a/assets/css/component/column.css
+++ b/assets/css/component/column.css
@@ -29,6 +29,7 @@
     break-after: auto;
     break-before: auto;
     break-inside: avoid;
+    margin-bottom: 1.618rem;
 }
 
 .column img {
@@ -79,12 +80,6 @@
 
     .column.pin {
         --col: 10rem;
-    }
-
-
-    div + #menu-footer,
-    .column > div + div {
-        margin-top: 1.618rem;
     }
 
 }
